# tinyinfer

./: .gitignore  CMakeLists.txt  LICENSE  OPTIMIZATIONS.md  README.md
include/: activations.h  layers.h  tensor.h
src/: activations.c  layers.c  tensor.c
tests/: test_activations.c  test_layer.c  test_layer_int8.c  test_tensor.c
